# dengai-predicting-disease-spread

./: Makefile  README.md  dengue_benchmark.ipynb  final_best_model.pkl  final_best_model_iq.pkl  final_best_model_sj.pkl  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/: main.py  preprocessing.py
